manifests/deployment.yaml
#############################################################
######################### app-proxy #########################

# Service exposing app-proxy service on node port 3000
apiVersion: v1
kind: Service
metadata:
  name: app-proxy
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3500'
spec:
  type: ClusterIP
  selector:
    tier: webserver
    app: app-proxy
  ports:
  - port: 3000
    name: http-fr
    targetPort: http-front
---
# deployment of the container app-proxy listening to port 3500
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-proxy
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '3500'
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: webserver
      app: app-proxy
  template:
    metadata:
      labels:
        tier: webserver
        app: app-proxy
    spec:
      serviceAccountName: pod-reader-account
      containers:
      - name: app-proxy
        image: nicolasdespres/podsticker:1
        imagePullPolicy: Always
        ports:
           - name: http-front
             containerPort: 9000
      nodeSelector:
          kubernetes.io/os: linux
